Archive2/19/d5959e6c16618e/output
main.cpp: In function 'A fun()':
main.cpp:12:12: error: use of deleted function 'A::A(const A&&)'
     return a;
            ^
main.cpp:7:5: note: declared here
     A(const A&&) = delete;
     ^
main.cpp: In function 'int main()':
main.cpp:16:17: error: use of deleted function 'A::A(const A&&)'
    auto a = fun();
                 ^
main.cpp:7:5: note: declared here
     A(const A&&) = delete;
     ^
